--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -14,7 +14,10 @@
     </head>
     <body>
         <header class="header">
-            Some Text...
+            <!-- With the shape and the images (gradient) put together and created now we can begin to add the logo and title  -->
+            <div class="logo-box">
+                <img src="img/logo-white.png" alt="Logo" class="logo">
+            </div>
         </header>
     </body>
 </html>
