finish animation button

--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -25,8 +25,9 @@
                     <span class="heading-primary-main">Outdoors</span>
                     <span class="heading-primary-sub">is where life happens</span>
                 </h1>
-            </div>
-            
+
+                <a href="#" class="btn btn-white">Discover our tours</a>
+            </div>   
         </header>
     </body>
 </html>
